# cucumber-rust-example

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  entrypoint_allure.sh  readme.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  requests.rs  responses.rs
src/api/: api.rs  client.rs  mod.rs  signer.rs
tests/: steps.rs  xchange.rs
tests/features/: market.feature  user.feature
