[package]
name = "xchange-cucumber-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.13"

[dev-dependencies]
cucumber = "0.13"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "xchange"
harness = false
